--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Story</title>
+   <link rel="stylesheet" href="./Assets/style/index.css">
   </head>
   <body>
     <!-- title-->
-    -
-    <h1>A Tale of Two Cities</h1>
+    <h1 style="color: blue;"> A tale of two cities</h1>
     <!-- sub title -->
-    <h2>by Charles Dickens</h2>
+    <h2 style="color: yellow;">by Charles Dickens</h2>
     <!-- paragraph -->
-    <p>
+    <p id="paragraphOne"> 
       A Tale of Two Cities is a historical novel published in 1859 by Charles
       Dickens, set in London and Paris before and during the French Revolution.
       The novel tells the story of the French Doctor Manette, his 18-year-long
